kubernetes/mongodb-headless-service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: devops-app-namespace
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None
  selector:
    app: mongodb
