kubernetes/mongodb-service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: devops-app-namespace
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
