kubernetes/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-service
  namespace: devops-app-namespace
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 9393
      targetPort: 9393
  type: ClusterIP
